[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Ben Sully <ben@bsull.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.9.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_scan = "0.4.1"
serde_yaml = "0.8.14"
